--- a/addons/kh_approvals/views/approval_rule_views.xml
+++ b/addons/kh_approvals/views/approval_rule_views.xml
@@ -1,17 +1,17 @@
 <odoo>
-  <record id="view_kh_approval_rule_tree" model="ir.ui.view">
-    <field name="name">kh.approval.rule.tree</field>
-    <field name="model">kh.approval.rule</field>
-    <field name="arch" type="xml">
-      <tree>
-        <field name="sequence"/>
-        <field name="name"/>
-        <field name="role"/>
-        <field name="user_id"/>
-        <field name="min_amount"/>
-      </tree>
-    </field>
-  </record>
+<record id="view_kh_approval_rule_list" model="ir.ui.view">
+  <field name="name">kh.approval.rule.list</field>
+  <field name="model">kh.approval.rule</field>
+  <field name="arch" type="xml">
+    <list>
+      <field name="sequence"/>
+      <field name="name"/>
+      <field name="role"/>
+      <field name="user_id"/>
+      <field name="min_amount"/>
+    </list>
+  </field>
+</record>
 
   <record id="view_kh_approval_rule_form" model="ir.ui.view">
     <field name="name">kh.approval.rule.form</field>
