--- a/addons/kh_approvals/views/approval_request_views.xml
+++ b/addons/kh_approvals/views/approval_request_views.xml
@@ -19,7 +19,11 @@
     <field name="arch" type="xml">
       <form string="Approval Request">
         <header>
-          <button name="action_submit" type="object" states="draft" string="Submit" class="oe_highlight"/>
+<button name="action_submit"
+        type="object"
+        string="Submit"
+        class="oe_highlight"
+        invisible="[('state','!=','draft')]"/>
           <field name="state" widget="statusbar" statusbar_visible="draft,in_review,approved,rejected"/>
         </header>
         <sheet>
