--- a/addons/kh_approvals/views/menu.xml
+++ b/addons/kh_approvals/views/menu.xml
@@ -12,7 +12,7 @@
     <record id="action_kh_approval_rules" model="ir.actions.act_window">
       <field name="name">Approval Rules</field>
       <field name="res_model">kh.approval.rule</field>
-      <field name="view_mode">tree,form</field>
+      <field name="view_mode">list,form</field>
     </record>
 
     <menuitem id="menu_kh_approvals_root" name="Approvals" sequence="20"/>
