--- a/addons/kh_approvals/views/approval_rule_views.xml
+++ b/addons/kh_approvals/views/approval_rule_views.xml
@@ -1,36 +1,43 @@
 <odoo>
-<record id="view_kh_approval_rule_list" model="ir.ui.view">
-  <field name="name">kh.approval.rule.list</field>
-  <field name="model">kh.approval.rule</field>
-  <field name="arch" type="xml">
-    <list>
-      <field name="sequence"/>
-      <field name="name"/>
-      <field name="role"/>
-      <field name="user_id"/>
-      <field name="min_amount"/>
-    </list>
-  </field>
-</record>
+  <data>
+    <!-- LIST -->
+    <record id="view_kh_approval_rule_list" model="ir.ui.view">
+      <field name="name">kh.approval.rule.list</field>
+      <field name="model">kh.approval.rule</field>
+      <field name="arch" type="xml">
+        <list>
+          <field name="sequence"/>
+          <field name="name"/>
+          <field name="role"/>
+          <field name="user_id"/>
+          <field name="min_amount"/>
+          <field name="currency_id"/>
+        </list>
+      </field>
+    </record>
 
-  <record id="view_kh_approval_rule_form" model="ir.ui.view">
-    <field name="name">kh.approval.rule.form</field>
-    <field name="model">kh.approval.rule</field>
-    <field name="arch" type="xml">
-      <form string="Approval Rule">
-        <sheet>
-          <group>
-            <field name="name"/>
-            <field name="sequence"/>
-            <field name="role"/>
-            <field name="user_id"/>
-            <field name="min_amount"/>
-            <field name="currency_id"/>
-            <field name="required"/>
-            <field name="company_id"/>
-          </group>
-        </sheet>
-      </form>
-    </field>
-  </record>
+    <!-- FORM -->
+    <record id="view_kh_approval_rule_form" model="ir.ui.view">
+      <field name="name">kh.approval.rule.form</field>
+      <field name="model">kh.approval.rule</field>
+      <field name="arch" type="xml">
+        <form>
+          <sheet>
+            <group>
+              <group>
+                <field name="sequence"/>
+                <field name="name" required="1"/>
+                <field name="role"/>
+              </group>
+              <group>
+                <field name="user_id" string="Approver"/>
+                <field name="min_amount"/>
+                <field name="currency_id"/>
+              </group>
+            </group>
+          </sheet>
+        </form>
+      </field>
+    </record>
+  </data>
 </odoo>
