--- a/addons/kh_approvals/views/approval_request_views.xml
+++ b/addons/kh_approvals/views/approval_request_views.xml
@@ -1,60 +1,47 @@
-<odoo>
- <record id="view_kh_approval_request_list" model="ir.ui.view">
-  <field name="name">kh.approval.request.list</field>
+<record id="view_kh_approval_request_form" model="ir.ui.view">
+  <field name="name">kh.approval.request.form</field>
   <field name="model">kh.approval.request</field>
   <field name="arch" type="xml">
-    <list>
-      <field name="name"/>
-      <field name="requester_id"/>
-      <field name="amount"/>
-      <field name="state"/>
-    </list>
-  </field>
-</record>
+    <form>
+      <header>
+        <button name="action_submit" type="object" string="Submit" class="oe_highlight"
+                invisible="[('state','!=','draft')]"/>
+      </header>
 
-
-  <record id="view_kh_approval_request_form" model="ir.ui.view">
-    <field name="name">kh.approval.request.form</field>
-    <field name="model">kh.approval.request</field>
-    <field name="arch" type="xml">
-      <form string="Approval Request">
-        <header>
-<button name="action_submit"
-        type="object"
-        string="Submit"
-        class="oe_highlight"
-        invisible="[('state','!=','draft')]"/>
-          <field name="state" widget="statusbar" statusbar_visible="draft,in_review,approved,rejected"/>
-        </header>
-        <sheet>
+      <sheet>
+        <group>
           <group>
-            <field name="name"/>
+            <field name="name" required="1"/>
             <field name="requester_id" readonly="1"/>
             <field name="amount"/>
             <field name="currency_id"/>
-            <field name="rule_ids" widget="many2many_tags"/>
-            <field name="company_id" groups="kh_approvals.group_kh_approvals_manager"/>
+            <!-- was rule_ids; use the model field name -->
+            <field name="line_rule_ids" widget="many2many_tags" string="Approval Route"/>
+            <!-- remove company_id unless you add it to the model -->
           </group>
-          <notebook>
-            <page string="Approval Steps">
-              <field name="approval_line_ids">
-  <list editable="bottom">
-    <field name="name"/>
-    <field name="approver_id"/>
-    <field name="required"/>
-    <field name="state"/>
-    <field name="note"/>
-  </list>
-</field>
+        </group>
 
-            </page>
-            <page string="Chatter">
-              <field name="message_follower_ids" widget="mail_followers"/>
-              <field name="message_ids" widget="mail_thread"/>
-            </page>
-          </notebook>
-        </sheet>
-      </form>
-    </field>
-  </record>
-</odoo>
+        <notebook>
+          <page string="Approval Steps">
+            <field name="approval_line_ids">
+              <list editable="bottom">
+                <field name="name"/>
+                <field name="approver_id"/>
+                <field name="required"/>
+                <field name="state"/>
+                <field name="note"/>
+              </list>
+            </field>
+          </page>
+          <page string="Chatter">
+            <field name="message_follower_ids" invisible="1"/>
+            <field name="activity_ids" invisible="1"/>
+            <field name="message_ids" widget="mail_thread"/>
+          </page>
+        </notebook>
+      </sheet>
+
+      <field name="state" widget="statusbar" statusbar_visible="draft,in_review,approved,rejected"/>
+    </form>
+  </field>
+</record>
