--- a/addons/kh_approvals/views/approval_request_views.xml
+++ b/addons/kh_approvals/views/approval_request_views.xml
@@ -42,8 +42,8 @@
 
         <notebook>
           <page string="Approval Steps">
-            <field name="approval_line_ids" context="{'default_request_id': active_id}">
-              <list editable="bottom">
+<field name="approval_line_ids">
+  <list editable="bottom">
                 <field name="name"/>
                 <field name="approver_id"/>
                 <field name="required"/>
