Fix: remove invalid context using active_id on approval_line_ids (v18 validator)

--- a/addons/kh_approvals/views/approval_request_views.xml
+++ b/addons/kh_approvals/views/approval_request_views.xml
@@ -27,7 +27,8 @@
   <button name="action_submit"
           type="object"
           string="Submit"
-          class="oe_highlight"/>
+          class="oe_highlight"
+          invisible="[('state','!=','draft')]"/>
   <field name="state" widget="statusbar"
          statusbar_visible="draft,in_review,approved,rejected"/>
 </header>
