--- a/addons/kh_approvals/views/menu.xml
+++ b/addons/kh_approvals/views/menu.xml
@@ -1,9 +1,10 @@
 <odoo>
   <data>
+    <!-- Actions -->
     <record id="action_kh_approval_requests" model="ir.actions.act_window">
       <field name="name">Approval Requests</field>
       <field name="res_model">kh.approval.request</field>
-<field name="view_mode">list,form,kanban</field>
+      <field name="view_mode">list,form,kanban</field>
       <field name="help" type="html">
         <p>Create approval requests and route them based on rules.</p>
       </field>
@@ -12,11 +13,16 @@
     <record id="action_kh_approval_rules" model="ir.actions.act_window">
       <field name="name">Approval Rules</field>
       <field name="res_model">kh.approval.rule</field>
-<field name="view_mode">list,form,kanban</field>
+      <field name="view_mode">list,form,kanban</field>
     </record>
 
+    <!-- Menus -->
     <menuitem id="menu_kh_approvals_root" name="Approvals" sequence="20"/>
-    <menuitem id="menu_kh_approvals_requests" name="Requests" parent="menu_kh_approvals_root" action="action_kh_approval_requests"/>
-    <menuitem id="menu_kh_approvals_rules" name="Rules" parent="menu_kh_approvals_root" action="action_kh_approval_rules"/>
+    <menuitem id="menu_kh_approvals_requests" name="Requests"
+              parent="menu_kh_approvals_root"
+              action="action_kh_approval_requests"/>
+    <menuitem id="menu_kh_approvals_rules" name="Rules"
+              parent="menu_kh_approvals_root"
+              action="action_kh_approval_rules"/>
   </data>
 </odoo>
