--- a/addons/kh_approvals/views/menu.xml
+++ b/addons/kh_approvals/views/menu.xml
@@ -1,28 +1,53 @@
 <odoo>
   <data>
-    <!-- Actions -->
-    <record id="action_kh_approval_requests" model="ir.actions.act_window">
-      <field name="name">Approval Requests</field>
+
+    <!-- Actions (ONE action per purpose; both reuse the same search view) -->
+    <record id="action_kh_approval_requests_my" model="ir.actions.act_window">
+      <field name="name">📝 My Requests</field>
       <field name="res_model">kh.approval.request</field>
-      <field name="view_mode">list,form,kanban</field>
+      <field name="view_mode">list,form</field>
+      <field name="search_view_id" ref="view_kh_approval_request_search"/>
+      <field name="context">{'search_default_my_requests': 1}</field>
       <field name="help" type="html">
         <p>Create approval requests and route them based on rules.</p>
       </field>
     </record>
 
-    <record id="action_kh_approval_rules" model="ir.actions.act_window">
-      <field name="name">Approval Rules</field>
-      <field name="res_model">kh.approval.rule</field>
-      <field name="view_mode">list,form,kanban</field>
+    <record id="action_kh_approval_requests_to_approve" model="ir.actions.act_window">
+      <field name="name">✅ To Approve</field>
+      <field name="res_model">kh.approval.request</field>
+      <field name="view_mode">list,form</field>
+      <field name="search_view_id" ref="view_kh_approval_request_search"/>
+      <field name="context">{'search_default_to_approve': 1}</field>
     </record>
 
-    <!-- Menus -->
+    <!-- Rules browser (unchanged) -->
+    <record id="action_kh_approval_rules" model="ir.actions.act_window">
+      <field name="name">⚙️ Approval Rules</field>
+      <field name="res_model">kh.approval.rule</field>
+      <field name="view_mode">list,form</field>
+    </record>
+
+    <!-- Menu -->
     <menuitem id="menu_kh_approvals_root" name="Approvals" sequence="20"/>
-    <menuitem id="menu_kh_approvals_requests" name="Requests"
+
+    <menuitem id="menu_kh_approvals_my"
+              name="My Requests"
               parent="menu_kh_approvals_root"
-              action="action_kh_approval_requests"/>
-    <menuitem id="menu_kh_approvals_rules" name="Rules"
+              action="action_kh_approval_requests_my"
+              sequence="1"/>
+
+    <menuitem id="menu_kh_approvals_to_approve"
+              name="To Approve"
               parent="menu_kh_approvals_root"
-              action="action_kh_approval_rules"/>
+              action="action_kh_approval_requests_to_approve"
+              sequence="2"/>
+
+    <menuitem id="menu_kh_approvals_rules"
+              name="Rules"
+              parent="menu_kh_approvals_root"
+              action="action_kh_approval_rules"
+              sequence="3"/>
+
   </data>
 </odoo>
