--- a/addons/kh_approvals/views/mail_activity_views.xml
+++ b/addons/kh_approvals/views/mail_activity_views.xml
@@ -1,20 +1,26 @@
 <odoo>
-  <record id="mail_activity_form_finish_label" model="ir.ui.view">
-    <field name="name">mail.activity.form.finish.label</field>
+  <record id="mail_activity_form_guard_assignee_not_creator" model="ir.ui.view">
+    <field name="name">mail.activity.form.guard.assignee.not.creator</field>
     <field name="model">mail.activity</field>
     <field name="inherit_id" ref="mail.mail_activity_view_form_popup"/>
     <field name="arch" type="xml">
-      <!-- Primary “Done” button: match by action name only -->
-      <xpath expr="//footer//button[@name='action_done'] | //footer//button[@name='action_feedback']"
-             position="attributes">
-        <attribute name="string">Finish</attribute>
+
+      <!-- Hide the Cancel (unlink) button when current user is assignee but not creator -->
+      <xpath expr="//footer//button[@name='unlink']" position="attributes">
+        <attribute name="attrs">{'invisible': ['&', ('user_id','=',uid), ('create_uid','!=',uid)]}</attribute>
       </xpath>
 
-      <!-- Optional: “Done & Schedule Next” if present in your build -->
-      <xpath expr="//footer//button[@name='action_done_schedule_next'] | //footer//button[@name='action_feedback_schedule_next']"
-             position="attributes">
-        <attribute name="string">Finish &amp; Schedule Next</attribute>
+      <!-- Make key fields read-only for assignee who isn't the creator -->
+      <xpath expr="//field[@name='summary']" position="attributes">
+        <attribute name="attrs">{'readonly': ['&', ('user_id','=',uid), ('create_uid','!=',uid)]}</attribute>
       </xpath>
+      <xpath expr="//field[@name='note']" position="attributes">
+        <attribute name="attrs">{'readonly': ['&', ('user_id','=',uid), ('create_uid','!=',uid)]}</attribute>
+      </xpath>
+      <xpath expr="//field[@name='date_deadline']" position="attributes">
+        <attribute name="attrs">{'readonly': ['&', ('user_id','=',uid), ('create_uid','!=',uid)]}</attribute>
+      </xpath>
+
     </field>
   </record>
 </odoo>
