--- a/addons/kh_approvals/views/mail_activity_views.xml
+++ b/addons/kh_approvals/views/mail_activity_views.xml
@@ -4,13 +4,11 @@
     <field name="model">mail.activity</field>
     <field name="inherit_id" ref="mail.mail_activity_view_form_popup"/>
     <field name="arch" type="xml">
-
-      <!-- Hide the Cancel (unlink) button when current user is assignee but not creator -->
+      <!-- Hide Cancel for assignee≠creator -->
       <xpath expr="//footer//button[@name='unlink']" position="attributes">
         <attribute name="attrs">{'invisible': ['&', ('user_id','=',uid), ('create_uid','!=',uid)]}</attribute>
       </xpath>
-
-      <!-- Make key fields read-only for assignee who isn't the creator -->
+      <!-- Make key fields read-only for assignee≠creator -->
       <xpath expr="//field[@name='summary']" position="attributes">
         <attribute name="attrs">{'readonly': ['&', ('user_id','=',uid), ('create_uid','!=',uid)]}</attribute>
       </xpath>
@@ -20,7 +18,6 @@
       <xpath expr="//field[@name='date_deadline']" position="attributes">
         <attribute name="attrs">{'readonly': ['&', ('user_id','=',uid), ('create_uid','!=',uid)]}</attribute>
       </xpath>
-
     </field>
   </record>
 </odoo>
