--- a/addons/kh_approvals/views/approval_request_views.xml
+++ b/addons/kh_approvals/views/approval_request_views.xml
@@ -36,7 +36,33 @@
         </list>
       </field>
     </record>
+   <record id="view_kh_approval_request_form" model="ir.ui.view">
+      <field name="name">kh.approval.request.form</field>
+      <field name="model">kh.approval.request</field>
+      <field name="inherit_id" ref="kh_approvals.view_kh_approval_request_form"/>
+      <field name="arch" type="xml">
+        <xpath expr="//sheet/group/group" position="inside">
+          <field name="company_id" groups="base.group_multi_company"/>
+          <field name="department_id"/>
+        </xpath>
+        <!-- Ensure the route only proposes rules for same company/department -->
+        <xpath expr="//field[@name='line_rule_ids']" position="attributes">
+          <attribute name="domain">[('company_id','in',[False, company_id]), '|', ('department_id','=',False), ('department_id','=',department_id)]</attribute>
+        </xpath>
+      </field>
+    </record>
 
+    <record id="view_kh_approval_rule_form" model="ir.ui.view">
+      <field name="name">kh.approval.rule.form</field>
+      <field name="model">kh.approval.rule</field>
+      <field name="inherit_id" ref="kh_approvals.view_kh_approval_rule_form"/>
+      <field name="arch" type="xml">
+        <xpath expr="//sheet/group/group[last()]" position="inside">
+          <field name="company_id" groups="base.group_multi_company"/>
+          <field name="department_id"/>
+        </xpath>
+      </field>
+    </record>
     <!-- Form -->
     <record id="view_kh_approval_request_form" model="ir.ui.view">
       <field name="name">kh.approval.request.form</field>
